# neuz

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE.md  README.de.md  README.md  README.中文.md  format.bat  package-lock.json  package.json  updater.json
.cargo/: config.toml
.github/workflows/: format-and-lint.yml  main.yml  pr-nightly-build.yml  pr-release-build.yml  pr-stable-build.yml  pr-testing-build.yml  push-testing-build.yml
src/: App.tsx  BotVisualizer.tsx  Launcher.tsx  MissionControl.tsx  index.css  index.tsx
src-tauri/: .botconfig  .botconfig copy  .gitignore  Cargo.toml  build.rs  rustfmt.toml  tauri.conf.json
src-tauri/src/: algo.rs  behavior.rs  data.rs  image_analyzer.rs  ipc.rs  main.rs  movement.rs  platform.rs  utils.rs
src-tauri/src/behavior/: farming_behavior.rs  shout_behavior.rs  support_behavior.rs  traits.rs
src-tauri/src/behavior/traits/: behavior.rs
src-tauri/src/client_state/: mod.rs  player.rs  state.rs  target.rs
src-tauri/src/cloud_detection/: cloud.rs  cloud_detection_kind.rs  cloud_detection_type.rs  cloud_detection_zones.rs  macros.rs  mod.rs
src-tauri/src/data/: bounds.rs  cloud.rs  cloud_detection_categorie.rs  cloud_detection_kind.rs  color.rs  pixel_cloud_kind.rs  pixel_cloud_kind_categorie.rs  pixel_detection.rs  point.rs  point_cloud.rs  progressbar.rs  stats_info.rs  target.rs
src-tauri/src/img/: color_detection.rs
src-tauri/src/ipc/: bot_config.rs  bot_config.rs~  frontend_info.rs
src-tauri/src/movement/: movement_accessor.rs  movement_coordinator.rs
src-tauri/src/platform/: commands.js  eval.js  init.js  linux.rs  macos.rs  shared.rs  windows.rs
src-tauri/src/platform/clientUI/: UI.js  main.js  utils.js
src-tauri/src/platform/shared/: key.rs  platform_accessor.rs
src-tauri/src/utils/: datetime.rs  timer.rs
src/assets/json/: mobs.json  toBeMerged.json  worlds.json
src/components/: ConfigPanel.tsx  Footer.tsx  Modal.tsx  ProfileDisplay.tsx  Slot.tsx  SlotBar.tsx  SlotModal.tsx  SocialButton.tsx  Tab.tsx  TabControl.tsx  UseModal.tsx  YesNoModal.tsx
src/components/behavior/: FarmingConfig.tsx  ShoutConfig.tsx
src/components/behaviors/: FarmingConfig.tsx  Settings.tsx  ShoutConfig.tsx  SupportConfig.tsx
src/components/config/: BooleanSlider.tsx  ColorSelector.tsx  ConfigCollapsible.tsx  ConfigLabel.tsx  ConfigPanel.tsx  ConfigRow.tsx  ConfigSlotList.tsx  ConfigTable.tsx  ConfigTableRow.tsx  FarmingConfig.tsx  InputList.tsx  ItemList.tsx  NumericInput.tsx  ShoutConfig.tsx  StringInput.tsx  StringList.tsx  TextInput.tsx  TimeInput.tsx  WhiteList.tsx
src/components/utils/: DefaultValuesChecker.tsx  KeyboardHotkeys.tsx  RandomInt.tsx  StopWatch.tsx  Time.tsx  UseModal.tsx  useDefaultValues.tsx
src/models/: BotConfig.tsx  FrontendInfo.tsx
src/state/: atoms.tsx
