[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.1", features = ["api-all"] }
rand = "0.8.5"
image = "0.24.2"
base64 = "0.13.0"
parking_lot = "0.12.1"
rayon = "1.5.3"
mouse-rs = "0.4.2"
raw-window-handle = "0.4.3"
libscreenshot = { git = "https://github.com/MadrigalStreetCartel/libscreenshot" }

# Windows platform support
[target.'cfg(windows)'.dependencies]
winapi = "0.3.9"
winput = "0.2.5"

# Linux platform support
[target.'cfg(target_os="linux")'.dependencies]
tfc = "0.6.1"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
