[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.57"

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = ["api-all"] }
rand = "0.8.5"
image = "0.24.2"
guard = "0.5.1"

# Parallelization
parking_lot = "0.12"
rayon = "1.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
slog = "2.7.0"
slog-term = "2.9.0"
slog-async = "2.7.0"
sentry = "0.27.0"
sentry-slog = "0.27.0"

# Platform access
raw-window-handle = "0.5" # This has to be in sync with the version used by tauri
libscreenshot = { git = "https://github.com/MadrigalStreetCartel/libscreenshot"}

# Utils
lazy_static = "1.4.0"
palette = "0.7.5"
[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
